@@ -41,6 +41,7 @@
 
 void WorldLoop()
 {
+    bool musicReset = false;
     Location_t tempLocation;
     int A = 0;
     int B = 0;
@@ -340,7 +341,7 @@ void WorldLoop()
                     break;
                 }
             }
- 
+
             //for(A = 1; A <= numWorldLevels; A++)
             for(auto *t : treeWorldLevelQuery(tempLocation, true))
             {
@@ -419,6 +420,7 @@ void WorldLoop()
                     }
                     else if(int(level.WarpX) != -1 || int(level.WarpY) != -1)
                     {
+                        musicReset = true;
                         StopMusic();
                         PlaySound(SFX_LevelSelect);
                         frmMain.setTargetTexture();
@@ -463,8 +465,15 @@ void WorldLoop()
                 {
                     curWorldMusicFile = mus.MusicFile;
                     StartMusic(mus.Type);
+                    musicReset = false;
                 }
             }
+        }
+
+        if(musicReset) // Resume the last playing music after teleportation
+        {
+            StartMusic(curWorldMusic);
+            // musicReset = false;
         }
     }
     else if(WorldPlayer[1].Move == 1)
